# LLM2ML-Platform

./: .dockerignore  .env.local  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.ubuntu  README.md  deploy.sh  docker-compose.yml  model.pkl  package-lock.json  package.json  render.yaml  requirements.txt  target_encoder.pkl  vercel-simple.json  vercel.json  vscode-profile-2025-07-30-14-04-00.heapprofile
api/: server.js
backend/: README.md  package-lock.json  package.json  projects.db  requirements.txt  server.js
backend/demo-machine-learning/: dummy_classification_data.csv  dummy_regression_data.csv  template_code.py
backend/models/: backup_02427b26-abc0-4820-af91-465e8e3b4eba.pkl  (+6 more)
config/: worker_scaling_config.js
frontend/: .dockerignore  .gitignore  App.tsx  Dockerfile  constants.ts  index.css  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
scripts/: train_11d02457-5a36-445c-8afe-7a6ac942d319.py
services/mas-service/demo-crewai/ml_agents/: pyproject.toml
services/mas-service/demo-crewai/ml_agents/src/ml_agents/: crew.py  main.py
services/mas-service/demo-crewai/ml_agents/src/ml_agents/config/: agents.yaml  tasks.yaml
services/mas-service/demo-crewai/ml_agents/src/ml_agents/tools/: __init__.py  csv_reader_tool.py  train_model_tool.py  training_template.py
services/mas-service/demo-crewai/ml_agents/tests/: __init__.py  conftest.py  run_tests.py  test_crew_initialization.py  test_csv_reader_tool.py  test_dataset.csv  test_multi_agent_system.py
uploads/: iris_dataset_short-1762599404596-189.csv
(+260 files in other folders)
